Editted learning.html to with proper structure

--- a/learning.html
+++ b/learning.html
@@ -1,1 +1,23 @@
-<p>Learning how to commit my html file :)</p>
+<!<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8" />
+  <title>Learning HTML and git'in it >:)</title>
+  </head>
+  <<body>
+    <h1>Header 1</h1>
+    <h2>Header 2</h2>
+    <p>Cephalopods: </p>
+    <ul>
+      <li>
+        Octopus
+        </li>
+        <li>
+          Squid
+          </li>
+          <li>
+            Cuttlefish
+            </li>
+      </ul>
+  </body>
+</html>
