--- a/learning.html
+++ b/learning.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <title>Learning HTML and git'in it >:)</title>
   </head>
-  <<body>
+  <body>
     <h1>Header 1</h1>
     <h2>Header 2</h2>
     <p>Cephalopods: </p>
